--- a/source/Support/template.html
+++ b/source/Support/template.html
@@ -138,11 +138,13 @@
     <p>Me chamo <b>%name%</b>, estou entrando em contato através do formulário de contato do site.</p>
 
     <div class="content">
-        <p>Gostaria de falar sobre:<br><b>%subject%</b></p>
-        <br>
         <p>Aqui estão os meus dados para o contato</p>
         <br>
         <p><b>E-mail:</b><br>%mail%</p>
+        <br>
+        <p><b>Empresa:</b><br>%company%</p>
+        <br>
+        <p><b>Telefone:</b><br>%phone%</p>
     </div>
 
     <div class="box">
